--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	faculty "Computer and information technology" National technical university "Kharkov polytechnical institute"
 	</div>
 	<p>Zhurba</p>
+	<p>Igor</p>
 </body>
 </html>
